<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CovidActivity">

    <include layout="@layout/action_bar_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="56sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="Video Explicativo"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/video_title_teacher"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16sp"
                    android:elevation="4sp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:autoPlay="false"
                            app:videoId="Q0G4c_alt_A" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16sp"
                    android:text="Conozca más del Covid-19"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="235sp"
                    android:src="@drawable/covid19" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what_is_covid"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="36sp"
                        android:layout_marginTop="8sp"
                        android:layout_marginBottom="16sp"
                        android:text="@string/text_what_is_covid"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_is"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="36sp"
                        android:layout_marginTop="8sp"
                        android:layout_marginBottom="16sp"
                        android:text="@string/text_how_is"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_sint"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="36sp"
                        android:layout_marginTop="8sp"
                        android:layout_marginBottom="16sp"
                        android:text="@string/text_what_sint"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what_do"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="36sp"
                        android:layout_marginTop="8sp"
                        android:text="@string/text_what_do"
                        android:textSize="16sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="415sp"
                    android:src="@drawable/lavate_las_mano" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>